# spark_serverless_example

./: Makefile  README.md  pyproject.toml
src/: main.py
src/spark_serverless_example/: read_file.py  save_to_bq.py
src/utils/: spark_setup.py  timer_utils.py
tests/: test_version.py
