[tool.poetry]
name = "spark-serverless-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
exclude = ["src/main.py"]
packages = [
    { include = "spark_serverless_example", from = "src" },
    { include = "utils", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
codetiming = "1.3.0"
humanfriendly = "9.1"

[tool.poetry.dev-dependencies]
# One may notice that I have not added pyspark in the [tool.poetry.dependencies] section… that's deliberate
# pyspark comes pre installed on Googles standard spark container
# see https://cloud.google.com/dataproc-serverless/docs/concepts/versions/spark-runtime-versions
pyspark = "3.3.2"
# https://python-poetry.org/docs/dependency-specification/
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
